worked on header and list with images

--- a/index.html
+++ b/index.html
@@ -21,13 +21,33 @@
     <div class="main">
         <div class="main-left">
             <p class="title">Landing page</p>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
+            <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
                 contrast</p>
+            <button class="sign-up">Sign up</button>
         </div>
         <div class="main-right">
-            <img class="landscape" src="landscape.png">
+            <img class="landscape" src="images/landscape.png">
         </div>
     </div>
+    </div>
+    <p class="subtitle">Some random information</p>
+    <div class="second">
+        <div class="list">
+            <img class="square" src="images/brown.jpg">
+            <p class="sub-text">a very beautiful dog</p>
+        </div>
+        <div class="list">
+            <img class="square" src="images/golden.jpg">
+            <p class="sub-text">a very beautiful dog</p>
+        </div>
+        <div class="list">
+            <img class="square" src="images/yellow.jpg">
+            <p class="sub-text">a very beautiful dog</p>
+        </div>
+        <div class="list">
+            <img class="square" src="images/jack.jpg">
+            <p class="sub-text">a very beautiful dog</p>
+        </div>
     </div>
 </body>
 </html>
