finished it, missing gallery and device settings

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
             <p class="title">Landing page</p>
             <p class="text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
                 contrast</p>
-            <button class="sign-up">Sign up</button>
+            <button>Sign up</button>
         </div>
-        <div class="main-right">
             <img class="landscape" src="images/landscape.png">
-        </div>
+        
     </div>
     </div>
     <p class="subtitle">Some random information</p>
@@ -48,6 +47,19 @@
             <img class="square" src="images/jack.jpg">
             <p class="sub-text">a very beautiful dog</p>
         </div>
+    </div>
+    <div class="third">
+        <p>My mission in life is not merely to survive, but to thrive; and to do so with some passion, some compassion, some humor, and some style.</p>
+        <p class="author">- Maya Angelou</p>
+    </div>
+    <div class="fourth">
+        <div class="blue">
+            <p><strong>Subscribe</strong><br> Sign up for our product information</p>
+            <button class="sign-up">Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Copyright © LittleHero05 2023</p>
     </div>
 </body>
 </html>
